[gd_scene load_steps=22 format=3 uid="uid://bahb01fdrg2bt"]

[ext_resource type="Texture2D" uid="uid://ierb0ljaqmf6" path="res://assets/animation/weapon/Ak2075.png" id="1_cy1od"]
[ext_resource type="Script" path="res://scripts/weapon/KA2075.gd" id="2_x7rk5"]
[ext_resource type="Texture2D" uid="uid://du2emj3dwv4vw" path="res://assets/sprites/light.png" id="3_88pum"]
[ext_resource type="AudioStream" uid="uid://dxlshl1eyxnb1" path="res://assets/SFX/KA2075/ka2075_reload.wav" id="3_bch2o"]
[ext_resource type="Script" path="res://scripts/RandomAudioPlayer.gd" id="3_gxdgc"]
[ext_resource type="AudioStream" uid="uid://b852jvb0ikd0g" path="res://assets/SFX/KA2075/ka2075_1.wav" id="4_b8hk8"]
[ext_resource type="AudioStream" uid="uid://deg3fk0ll3tfu" path="res://assets/SFX/KA2075/ka2075_push_magazine.wav" id="4_ve3ao"]
[ext_resource type="AudioStream" uid="uid://uulqy78bnfgu" path="res://assets/SFX/KA2075/ka2075_2.wav" id="5_7kdta"]
[ext_resource type="AudioStream" uid="uid://b1shr2wi6o82m" path="res://assets/SFX/KA2075/ka2075_empty.wav" id="5_crvsh"]
[ext_resource type="AudioStream" uid="uid://cyxee5t1w81xe" path="res://assets/SFX/KA2075/ka2075_3.wav" id="6_qcjem"]
[ext_resource type="AudioStream" uid="uid://deu1iw7upbb5u" path="res://assets/SFX/KA2075/ka2075_4.wav" id="7_sxfub"]
[ext_resource type="AudioStream" uid="uid://dllfgo6t0jhvn" path="res://assets/SFX/KA2075/ka2075_5.wav" id="8_8x60s"]
[ext_resource type="AudioStream" uid="uid://bhw46va525n5b" path="res://assets/SFX/KA2075/ka2075_6.wav" id="9_hhdpu"]
[ext_resource type="Script" path="res://scripts/weapon/PistolUI.gd" id="13_11uim"]
[ext_resource type="Texture2D" uid="uid://5xswvmg3vkjt" path="res://assets/UI/EqWeaponUI.png" id="14_0e5wv"]
[ext_resource type="Texture2D" uid="uid://dbx87aw48qyle" path="res://assets/UI/AmmoUI.png" id="15_dev5x"]
[ext_resource type="FontFile" uid="uid://j61n07mbl1ud" path="res://assets/fonts/PixelifySans-VariableFont_wght.ttf" id="16_dl7lc"]

[sub_resource type="Animation" id="Animation_qos7l"]
resource_name = "Idle"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PointLight2D:enabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_w1aqr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PointLight2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PointLight2D:enabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_566fr"]
resource_name = "Shoot"
length = 0.2
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PointLight2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 0.0]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"shoot"
}]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ShotSounds")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_random_audio"
}]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PointLight2D:enabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4xmgp"]
_data = {
"Idle": SubResource("Animation_qos7l"),
"RESET": SubResource("Animation_w1aqr"),
"Shoot": SubResource("Animation_566fr")
}

[node name="KA2075" type="Sprite2D"]
light_mask = 2
visibility_layer = 3
position = Vector2(12, 3)
scale = Vector2(0.7, 0.7)
texture = ExtResource("1_cy1od")
hframes = 4
script = ExtResource("2_x7rk5")
damage = 2
weapon_type = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4xmgp")
}
autoplay = "Idle"

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="ReloadSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_bch2o")

[node name="PushMagazineAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_ve3ao")

[node name="EmptyMagazineAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_crvsh")

[node name="ShotSounds" type="Node" parent="."]
script = ExtResource("3_gxdgc")

[node name="KA2075_1" type="AudioStreamPlayer" parent="ShotSounds"]
stream = ExtResource("4_b8hk8")

[node name="KA2075_2" type="AudioStreamPlayer" parent="ShotSounds"]
stream = ExtResource("5_7kdta")

[node name="KA2075_3" type="AudioStreamPlayer" parent="ShotSounds"]
stream = ExtResource("6_qcjem")

[node name="KA2075_4" type="AudioStreamPlayer" parent="ShotSounds"]
stream = ExtResource("7_sxfub")

[node name="KA2075_5" type="AudioStreamPlayer" parent="ShotSounds"]
stream = ExtResource("8_8x60s")

[node name="KA2075_6" type="AudioStreamPlayer" parent="ShotSounds"]
stream = ExtResource("9_hhdpu")

[node name="KA2075UI" type="CanvasLayer" parent="."]
script = ExtResource("13_11uim")

[node name="WeaponStatus" type="Control" parent="KA2075UI"]
layout_mode = 3
anchors_preset = 0
offset_left = 450.0
offset_top = 218.0
offset_right = 557.0
offset_bottom = 311.0

[node name="Weapon" type="TextureRect" parent="KA2075UI/WeaponStatus"]
layout_mode = 0
offset_right = 126.0
offset_bottom = 105.0
texture = ExtResource("14_0e5wv")
stretch_mode = 4

[node name="Sprite2D" type="Sprite2D" parent="KA2075UI/WeaponStatus/Weapon"]
position = Vector2(46, 29)
scale = Vector2(1.5, 1.5)
texture = ExtResource("1_cy1od")
hframes = 5

[node name="Ammo" type="TextureRect" parent="KA2075UI/WeaponStatus"]
self_modulate = Color(0.423529, 0.482353, 0.466667, 1)
layout_mode = 0
offset_left = 12.0
offset_top = -11.0
offset_right = 128.0
offset_bottom = 106.0
texture = ExtResource("15_dev5x")
stretch_mode = 4
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="KA2075UI/WeaponStatus/Ammo"]
layout_mode = 0
offset_left = 41.0
offset_top = 68.0
offset_right = 86.0
offset_bottom = 90.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("16_dl7lc")
theme_override_font_sizes/font_size = 15
text = "00 | 00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(24, -1)
enabled = false
color = Color(0.811765, 0.980392, 1, 1)
range_z_min = -1
texture = ExtResource("3_88pum")
texture_scale = 0.5

[node name="ProjectilePosition" type="Marker2D" parent="."]
position = Vector2(27.1429, 0)

[connection signal="bullets_updated" from="." to="KA2075UI" method="_on_pistol_bullets_updated"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
[connection signal="finished" from="ReloadSound" to="." method="_on_reload_sound_finished"]
[connection signal="finished" from="PushMagazineAudio" to="." method="_on_push_magazine_audio_finished"]
